Comments + Use as a toolchain

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,10 @@
 cmake_minimum_required(VERSION 3.5)
 
-include(cmake2riot.cmake)
-
 project(cmake2riot_test)
 
-add_executable(${PROJECT_NAME}
-    test.c
-)
+add_executable(${PROJECT_NAME} test.c)
 
-install(TARGETS ${PROJECT_NAME})
+install(
+    TARGETS ${PROJECT_NAME}
+    RUNTIME DESTINATION bin
+    )
